# ChangeLog for gnome-base/gconf
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-base/gconf/ChangeLog,v 1.214 2009/10/24 16:27:06 nixnut Exp $

  24 Oct 2009; nixnut <nixnut@gentoo.org> gconf-2.26.2-r1.ebuild:
  ppc stable #281427

  16 Oct 2009; Markus Meier <maekke@gentoo.org> gconf-2.26.2-r1.ebuild:
  x86 stable, bug #281427

  08 Oct 2009; Olivier Crête <tester@gentoo.org> gconf-2.26.2-r1.ebuild:
  Stable on amd64, bug #281427

*gconf-2.26.2-r1 (16 Jun 2009)

  16 Jun 2009; <mrpouet@gentoo.org> +gconf-2.26.2-r1.ebuild:
  Prevent totaly disabling debug mode, some apps can crash in the worst case

*gconf-2.26.2 (16 May 2009)

  16 May 2009; Gilles Dartiguelongue <eva@gentoo.org> +gconf-2.26.2.ebuild:
  Bump to 2.26.2. Speed improvments to markup backend.

  01 May 2009; Gilles Dartiguelongue <eva@gentoo.org>
  -files/gconf-2.20.1-automagic-ldap.patch,
  -files/gconf-2.20.1-drop-gtk-doc.patch,
  -files/gconf-2.22.0-automagic-ldap.patch, -gconf-2.20.1-r1.ebuild,
  -gconf-2.22.0.ebuild, gconf-2.24.0.ebuild, gconf-2.26.0.ebuild:
  Make gconf cross-compilable, bug #262747. Kill gconf-2.26 warning, bug
  #268070. Clean up old revisions.

  28 Apr 2009; Raúl Porcel <armin76@gentoo.org> gconf-2.24.0.ebuild:
  sh stable

  27 Apr 2009; Jeroen Roovers <jer@gentoo.org> gconf-2.24.0:
  Stable for HPPA (bug #260063).

  27 Apr 2009; Raúl Porcel <armin76@gentoo.org> gconf-2.24.0.ebuild:
  arm stable

*gconf-2.26.0 (19 Apr 2009)

  19 Apr 2009; Mart Raudsepp <leio@gentoo.org> +gconf-2.26.0.ebuild:
  New version: --toggle and --search-key-regexp support in gconftool-2; size
  and parsing speed improvements in saved gconf setting trees; bug fixes

  12 Apr 2009; Friedrich Oslage <bluebird@gentoo.org> gconf-2.24.0.ebuild:
  Stable on sparc, bug #260063

  18 Mar 2009; Raúl Porcel <armin76@gentoo.org> gconf-2.24.0.ebuild:
  alpha/ia64 stable wrt #260063
