@@ -2,11 +2,10 @@ AUX gconf-2.24.0-automagic-ldap.patch 2442 RMD160 adc1d7e7f8209da674fca5ac6ad916
 AUX gconf-2.24.0-no-gconfd.patch 787 RMD160 bbcd0e1dd0f49053522e703c33a9befb392b2203 SHA1 ccc94c4766a29f1bb3f16c1d1995996ba682686a SHA256 f8352648276d2a2dab162ddade55ec0371e7c4f8bc3834de246fda8c32c66d3c
 AUX gconf-2.26.2-darwin-cant-link-module.patch 1506 RMD160 982c7d5c344a971f299dde4bafc29267c4ca6ad2 SHA1 3f1b64d9aec916792b9886581815bf5d410d0ab9 SHA256 d773e29fc75c1d93968bbb959c80c200e92afd0fd984e06320d38f641bff3dbd
 DIST GConf-2.24.0.tar.bz2 1467817 RMD160 b4016275e9dffa248620303bc2241f6c0081be06 SHA1 e93ff2609c0278075acabdf609f42aa406e20c8e SHA256 990003904ee13b2fd98a61d55fa4d0fcb30fb233454a036bb9465f42d1acbb1b
-DIST GConf-2.26.0.tar.bz2 1490741 RMD160 0673a347b42519f411a7ba247aad12e8249f754d SHA1 317fd4504cc4104b7b914326cbb3b73d61234b4c SHA256 2b9fe741f84d78d7c4f18835728facce81f7db656c2c37f669ee61785911da10
 DIST GConf-2.26.2.tar.bz2 1474738 RMD160 280cd55dc3562445c716b88dfddba4ddd2508786 SHA1 bf5323d974fa22165de2144100234647fd50ef17 SHA256 717af270db891088394d154e3e22acc01af382306624c83679a4f8d6ba8467ed
+DIST GConf-2.28.0.tar.bz2 1476190 RMD160 99b09ab7d6453338adacc1f194013294b65fe33c SHA1 8371d88cc84fd727dfd0f8d413fa20a8bfe814fd SHA256 d057dcfe2bfb2a80e592349c2a78d7dce12d19542aeced466c64fb701c806ac8
 EBUILD gconf-2.24.0.ebuild 2477 RMD160 6f5abdf3a731ae3832abf5c248f75d768cbb1ed0 SHA1 3ba25dfe7de59bf3b9b2f667404a481536c41e40 SHA256 044db05b0ad632f0438f48189a90a3eca68bf1315119c3f0fa5e84ceeac5133b
-EBUILD gconf-2.26.0.ebuild 2634 RMD160 dab7e124c3ebb6242f74fcf400d332faa693801f SHA1 f445a63e56e46862ed69aa23131845be570473fa SHA256 fc41bf13ce96a5a4d4bafd2e8f083342d9c2a7d47b0acade6a366aab246136b2
 EBUILD gconf-2.26.2-r1.ebuild 2787 RMD160 9b6cd6fd8b95120ae4a6f2dda942e64a800da2da SHA1 ce21aad35876292432ef777069b656ff97438ea1 SHA256 9f2742ebda173ec57c3d089b1462be4dc2c31d069dae4972964aaf60a52411bf
-EBUILD gconf-2.26.2.ebuild 2708 RMD160 e7d9b637aa7ac9d33540c9bfd8fb41f7063db2c8 SHA1 fe844dc699b3e05e5a88049ba338d4d9bf8dc841 SHA256 9e54e9df50083d425d859a601503355277ca7c0bdea35a3acbfeb47c4fced7fe
-MISC ChangeLog 28046 RMD160 b5ecb1c8cc250325d02fd5218f21dcc0ad6a513d SHA1 6e874ab86b673786beecd76d83412ba1c7091fb1 SHA256 165f7e67f774d2f62bad7c7ca8812ed9bcf80fd7059e8a714956af3b89622273
+EBUILD gconf-2.28.0.ebuild 2780 RMD160 41df704007bb0b847c43deab2196fc5bea238371 SHA1 e444ec9f168d84dde1b3a5659a28e6c9883a5b4d SHA256 eaced0e6ee25b600878c19f71079efe0b06fda2bb135cf24f4cb1f834dd49754
+MISC ChangeLog 28248 RMD160 4943dfa5a8c1f6f5774484d464cd0f9820ecb77f SHA1 ad7d5ab048d979f9217b5a399b27b6f977689365 SHA256 e00e7300359e1da47625c4a2d6e92b708887344f4e3351d4f1423d3e1ca34ae3
 MISC metadata.xml 158 RMD160 c0e2bae8e91bb6be8922bac5e4f597302e06587e SHA1 38f78e9790bcd4382b4a49aa226aa6dda1d3a3d7 SHA256 3a7dbca0fdc557de69783e0663e2d76ddab129ea8a19b2d0ef6d3e5d1b947ce1
