@@ -1,6 +1,6 @@
 # Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/gconf/gconf-2.26.2.ebuild,v 1.1 2009/05/16 09:47:56 eva Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/gconf/gconf-2.28.0.ebuild,v 1.1 2009/10/29 23:38:50 eva Exp $
 
 EAPI="2"
 
@@ -26,7 +26,7 @@ RDEPEND=">=dev-libs/glib-2.14
 	>=gnome-base/orbit-2.4
 	>=dev-libs/libxml2-2
 	ldap? ( net-nds/openldap )
-	policykit? ( >=sys-auth/policykit-0.7 )"
+	policykit? ( sys-auth/polkit )"
 DEPEND="${RDEPEND}
 	>=dev-util/intltool-0.35
 	>=dev-util/pkgconfig-0.9
@@ -41,7 +41,6 @@ pkg_setup() {
 	G2CONF="${G2CONF}
 		--enable-gtk
 		--disable-static
-		$(use_enable debug)
 		$(use_with ldap openldap)
 		$(use_enable policykit defaults-service)"
 	kill_gconf
@@ -58,6 +57,9 @@ src_prepare() {
 
 	# Fix intltoolize broken file, see upstream #577133
 	sed "s:'\^\$\$lang\$\$':\^\$\$lang\$\$:g" -i po/Makefile.in.in || die "sed failed"
+
+	# Don't try to link against modules
+	epatch "${FILESDIR}"/${PN}-2.26.2-darwin-cant-link-module.patch
 }
 
 # Can't run tests, missing script.
