@@ -1,6 +1,12 @@
 # ChangeLog for gnome-base/gconf
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/gconf/ChangeLog,v 1.214 2009/10/24 16:27:06 nixnut Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/gconf/ChangeLog,v 1.215 2009/10/29 23:38:50 eva Exp $
+
+*gconf-2.28.0 (29 Oct 2009)
+
+  29 Oct 2009; Gilles Dartiguelongue <eva@gentoo.org> -gconf-2.26.0.ebuild,
+  -gconf-2.26.2.ebuild, +gconf-2.28.0.ebuild:
+  New version for GNOME 2.28. Clean up old revision.
 
   24 Oct 2009; nixnut <nixnut@gentoo.org> gconf-2.26.2-r1.ebuild:
   ppc stable #281427
